--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
             <span></span>
         </div>
     </nav>
+    <div class="main-content">
+        <div class="content-1">
 
+        </div>
+        <div class="content-2">
+
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
