--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>M-Posyandu</title>
 </head>
 <body>
+    <!-- NAVIGATION BAR -->
     <nav>
         <div class="icon">
             <h3>M-Posyandu</h3>
@@ -31,14 +32,49 @@
             <span></span>
         </div>
     </nav>
-    <div class="main-content">
-        <div class="content-1">
 
+    <!-- MAIN-CONTENT -->
+    <div class="main-content">
+        <!-- CONTENT 1 -->
+        <div class="content-1">
+            <ul align="center">
+                <li class="text1">M-Posyandu</li>
+                <li class="text2">Pendataan imunisasi anak di Posyandu secara Online</li>
+            </ul>
+            <ul>
+                <img src="" width="100px">
+            </ul>
         </div>
         <div class="content-2">
-
+            <ul align="center">
+                <li class="text1">About M-Posyandu</li>
+                <li class="text2">Pendataan imunisasi anak di Posyandu secara Online</li>
+            </ul>
+        </div>
+        <div class="content-3">
+            <ul align="center">
+                <li class="text1">Contact</li>
+                <li class="text2">Follow Us</li>
+                <li>
+                    <a href="">
+                        <img src="https://cdn-icons-png.flaticon.com/512/5968/5968764.png" width="40px">
+                    </a>
+                    <a href="">
+                        <img src="https://cdn-icons-png.flaticon.com/512/3955/3955024.png" width="40px">
+                    </a>
+                    <a href="">
+                        <img src="https://cdn-icons-png.flaticon.com/512/5968/5968841.png" width="40px">
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
+
+    <!-- FOOTER -->
+    <footer>
+        <p align="center">© 2022 designed by development's M-Posyandu. All Rights Reserved</p>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
