--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <!-- CONTENT 1 -->
         <div class="content-1">
             <ul align="center">
-                <li class="text1">M-Posyandu</li>
-                <li class="text2">Pendataan imunisasi anak di Posyandu secara Online</li>
+                <h1>M-Posyandu</h1>
+                <li class="text2">Pendataan imunisasi anak di Posyandu dengan sistem online</li>
             </ul>
             <ul>
                 <img src="" width="100px">
@@ -53,9 +53,12 @@
         </div>
         <div class="content-3">
             <ul align="center">
-                <li class="text1">Contact</li>
-                <li class="text2">Follow Us</li>
-                <li>
+                <li class="info" align="left">
+                    <h2>M-Posyandu</h2>
+                    <p>Pendataan imunisasi <br>anak di Posyandu <br>dengan sistem online</p>
+                </li>
+                <li class="sosmed">
+                    <h2>Follow Us</h2>
                     <a href="">
                         <img src="https://cdn-icons-png.flaticon.com/512/5968/5968764.png" width="40px">
                     </a>
@@ -65,6 +68,7 @@
                     <a href="">
                         <img src="https://cdn-icons-png.flaticon.com/512/5968/5968841.png" width="40px">
                     </a>
+                    <p>Phone : 08123456789</p>
                 </li>
             </ul>
         </div>
