--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
             <h3>M-Posyandu</h3>
         </div>
         <ul class="menu-1">
-            <li><a href="/">Home</a></li>
-            <li><a href="/">About</a></li>
+            <li><a href="homeUser.php">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="features.html">Features</a></li>
             <li><a href="/">Contact</a></li>
         </ul>
         <ul class="menu-2">
@@ -39,39 +40,61 @@
         <div class="content-1">
             <ul align="center">
                 <h1>M-Posyandu</h1>
-                <li class="text2">Pendataan imunisasi anak di Posyandu dengan sistem online</li>
+                <li class="text2"><br>Pendataan imunisasi anak di Posyandu dengan sistem online</li>
             </ul>
             <ul>
-                <img src="" width="100px">
+                <img src="https://cdn-icons-png.flaticon.com/512/6205/6205025.png" width="250px">
             </ul>
         </div>
+        <!-- CONTENT 2 -->
         <div class="content-2">
             <ul align="center">
-                <li class="text1">About M-Posyandu</li>
-                <li class="text2">Pendataan imunisasi anak di Posyandu secara Online</li>
+                <li class="text1">About M-Posyandu<br></li>
+                <li class="text2">
+                    <br>Dengan adanya website M-Posyandu ini diharapkan <br>
+                    dapat membantu para orang tua dalam pemberian atau penentuan <br>
+                    imunisasi si anak, dengan begitu anak bisa mendapatkan <br> 
+                    imunisasi yang tepat sesuai dengan usianya.
+                </li>
             </ul>
         </div>
+        <!-- CONTENT 3 -->
         <div class="content-3">
             <ul align="center">
-                <li class="info" align="left">
-                    <h2>M-Posyandu</h2>
-                    <p>Pendataan imunisasi <br>anak di Posyandu <br>dengan sistem online</p>
-                </li>
-                <li class="sosmed">
-                    <h2>Follow Us</h2>
-                    <a href="">
-                        <img src="https://cdn-icons-png.flaticon.com/512/5968/5968764.png" width="40px">
-                    </a>
-                    <a href="">
-                        <img src="https://cdn-icons-png.flaticon.com/512/3955/3955024.png" width="40px">
-                    </a>
-                    <a href="">
-                        <img src="https://cdn-icons-png.flaticon.com/512/5968/5968841.png" width="40px">
-                    </a>
-                    <p>Phone : 08123456789</p>
+                <li class="text1">Features<br><br></li>
+                <li class="text3">
+                    <p>
+                        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/684/684831.png"></a>
+                        <a href="">Pendataan Profile <br> Anak</a>
+                    </p>
+                    <p>
+                        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/2822/2822676.png"></a>
+                        <a href="">Lihat Data</a>
+                    </p>
                 </li>
             </ul>
         </div>
+    </div>
+    
+    <div class="contact">
+        <ul align="center">
+            <li class="info" align="left">
+                <h2>M-Posyandu</h2>
+                <p>Pendataan imunisasi <br>anak di Posyandu <br>dengan sistem online</p>
+            </li>
+            <li class="sosmed">
+                <h2>Follow Us</h2>
+                <a href="" title="Facebook">
+                    <img src="https://cdn-icons-png.flaticon.com/512/5968/5968764.png" width="40px">
+                </a>
+                <a href="" title="Instagram">
+                    <img src="https://cdn-icons-png.flaticon.com/512/3955/3955024.png" width="40px">
+                </a>
+                <a href="" title="WhatsApp">
+                    <img src="https://cdn-icons-png.flaticon.com/512/5968/5968841.png" width="40px">
+                </a>
+            </li>
+        </ul>
     </div>
 
     <!-- FOOTER -->
