--- a/homeUser.html
+++ b/homeUser.html
@@ -19,7 +19,7 @@
         <ul class="menu-1">
             <li><a href="homeUser.php">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="/">Features</a></li>
+            <li><a href="features.html">Features</a></li>
             <li><a href="/">Contact</a></li>
         </ul>
         <ul class="menu-2">
@@ -36,34 +36,41 @@
 
     <!-- MAIN-CONTENT -->
     <div class="main-content">
+        <!-- CONTENT 1 -->
+        <div class="content-1">
+            <ul align="center">
+                <h1>M-Posyandu</h1>
+                <li class="text2"><br>Pendataan imunisasi anak di Posyandu dengan sistem online</li>
+            </ul>
+            <ul>
+                <img src="https://cdn-icons-png.flaticon.com/512/6205/6205025.png" width="250px">
+            </ul>
+        </div>
         <!-- CONTENT 2 -->
         <div class="content-2">
-            <ul>
-                <li class="text1" align="center">About M-Posyandu</li>
-                <li class="text2" align="center">
+            <ul align="center">
+                <li class="text1">About M-Posyandu<br></li>
+                <li class="text2">
                     <br>Dengan adanya website M-Posyandu ini diharapkan <br>
                     dapat membantu para orang tua dalam pemberian atau penentuan <br>
                     imunisasi si anak, dengan begitu anak bisa mendapatkan <br> 
-                    imunisasi yang tepat sesuai dengan usianya.<br><br><br>
+                    imunisasi yang tepat sesuai dengan usianya.
                 </li>
-                <li class="text1" align="center">About Us</li>
-                <li class="text2" align="center">
-                    <br>Kelompok 8 Projek Akhir Pemrograman Web<br>
-                    Informatika A 2021<br><br>
-                    <table border="0">
-                        <tr>
-                            <td>Ilham Ramadhan</td>
-                            <td>[2109106011]</td>
-                        </tr>
-                        <tr>
-                            <td>Al Fiana Nur Priyanti</td>
-                            <td>[2109106022]</td>
-                        </tr>
-                        <tr>
-                            <td>Shafira Octafia</td>
-                            <td>[2109106023]</td>
-                        </tr>
-                    </table>
+            </ul>
+        </div>
+        <!-- CONTENT 3 -->
+        <div class="content-3">
+            <ul align="center">
+                <li class="text1">Features<br><br></li>
+                <li class="text3">
+                    <p>
+                        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/684/684831.png"></a>
+                        <a href="">Pendataan Profile <br> Anak</a>
+                    </p>
+                    <p>
+                        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/2822/2822676.png"></a>
+                        <a href="">Lihat Data</a>
+                    </p>
                 </li>
             </ul>
         </div>
