--- a/index.html
+++ b/index.html
@@ -22,13 +22,18 @@
     <div class="main-content">
         <!-- CONTENT 1 -->
         <div class="role">
-            <ul align="center">
-                <a href=""><img src="https://cdn-icons-png.flaticon.com/512/748/748137.png" width="250px"></a>
-                <a href="">USER</a>
+            <ul>
+                <h1 align="center">L O G I N  S E B A G A I</h1>
             </ul>
-            <ul align="center">
-                <a href=""><img src="https://cdn-icons-png.flaticon.com/512/3284/3284615.png" width="250px"></a>
-                <a href="">ADMIN</a>
+            <ul>
+                <li align="center">
+                    <a href=""><img src="https://cdn-user-icons.flaticon.com/78237/78237210/1668041718347.svg?token=exp=1668042620~hmac=d72716b56b2651b3f23a5ece33d3fe43" width="250px"></a>
+                    <a href="">USER</a>
+                </li>
+                <li align="center">
+                    <a href=""><img src="https://cdn-user-icons.flaticon.com/78237/78237210/1668047121812.svg?token=exp=1668048037~hmac=974adfb7ed6395227d67f3a8fa751484" width="250px"></a>
+                    <a href="">ADMIN</a>
+                </li>
             </ul>
         </div>
     </div>
