--- a/features.html
+++ b/features.html
@@ -23,7 +23,7 @@
             <li><a href="/">Contact</a></li>
         </ul>
         <ul class="menu-2">
-            <li><a href="/">User</a></li>
+            <li><a href="/">Profil</a></li>
             <li><a href="/">Logout</a></li>
         </ul>
         <div class="menu-toggle">
@@ -54,6 +54,7 @@
         </div>
     </div>
     
+    <!-- CONTACT -->
     <div class="contact">
         <ul align="center">
             <li class="info" align="left">
