--- a/homeUser.html
+++ b/homeUser.html
@@ -23,7 +23,7 @@
             <li><a href="/">Contact</a></li>
         </ul>
         <ul class="menu-2">
-            <li><a href="/">User</a></li>
+            <li><a href="/">Profil</a></li>
             <li><a href="/">Logout</a></li>
         </ul>
         <div class="menu-toggle">
@@ -64,8 +64,8 @@
                 <li class="text1">Features<br><br></li>
                 <li class="text3">
                     <p>
-                        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/684/684831.png"></a>
-                        <a href="">Pendataan Profile <br> Anak</a>
+                        <a href="formUser.php"><img src="https://cdn-icons-png.flaticon.com/512/684/684831.png"></a>
+                        <a href="formUser.php">Pendataan Profile <br> Anak</a>
                     </p>
                     <p>
                         <a href=""><img src="https://cdn-icons-png.flaticon.com/512/2822/2822676.png"></a>
@@ -76,6 +76,8 @@
         </div>
     </div>
     
+    <!-- FOOTER -->
+    <!-- CONTACT -->
     <div class="contact">
         <ul align="center">
             <li class="info" align="left">
@@ -96,8 +98,6 @@
             </li>
         </ul>
     </div>
-
-    <!-- FOOTER -->
     <footer>
         <p align="center">© 2022 designed by development's M-Posyandu. All Rights Reserved</p>
     </footer>
