--- a/userlogin.html
+++ b/userlogin.html
@@ -21,13 +21,14 @@
         <form id = "login-form" action = "" method = "post">
             <div class = "txt_field">
                 <label>Username</label>
-                <input type = "text" name = "user">
+                <input type = "text" name = "user" title="Masukkan Username">
             </div>
             <div class = "txt_field">
                 <label>Password</label>
-                <input type = "password" name = "password">
+                <input type = "password" name = "password" title="Masukkan Password">
             </div>
-            <input type = "submit" name = "login" value = "login">
+            
+            <input type = "submit" name = "login" value = "Login">
         </form>
         <p> Belum Memiliki Akun?
             <a href = "regis.php">Register</a>
