--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             <li><a href="/">Contact</a></li>
         </ul>
         <ul class="menu-2">
-            <li><a href="/">User</a></li>
+            <li><a href="/">Profil</a></li>
             <li><a href="/">Logout</a></li>
         </ul>
         <div class="menu-toggle">
