--- a/homeAdmin.html
+++ b/homeAdmin.html
@@ -7,7 +7,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <title>Admin Page M-Posyandu</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
             <li><a href="/">Contact</a></li>
         </ul>
         <ul class="menu-2">
-            <li><a href="/">Admin</a></li>
+            <li><a href="/">Profil</a></li>
             <li><a href="/">Logout</a></li>
         </ul>
         <div class="menu-toggle">
@@ -39,7 +39,7 @@
         <!-- CONTENT 1 -->
         <div class="content-1">
             <ul align="center">
-                <h1>Admin Page<br>M-Posyandu</h1>
+                <h1>Administrator Page<br>M-Posyandu</h1>
             </ul>
             <ul>
                 <img src="https://cdn-icons-png.flaticon.com/512/3284/3284615.png" width="350px">
@@ -48,52 +48,15 @@
         <!-- CONTENT 2 -->
         <div class="content-2">
             <ul align="center">
-                <li class="text1">About M-Posyandu<br></li>
-                <li class="text2">
-                    <br>Dengan adanya website M-Posyandu ini diharapkan <br>
-                    dapat membantu para orang tua dalam pemberian atau penentuan <br>
-                    imunisasi si anak, dengan begitu anak bisa mendapatkan <br> 
-                    imunisasi yang tepat sesuai dengan usianya.
-                </li>
-            </ul>
-        </div>
-        <!-- CONTENT 3 -->
-        <div class="content-3">
-            <ul align="center">
                 <li class="text1">Features<br><br></li>
                 <li class="text3">
                     <p>
                         <a href=""><img src="https://cdn-icons-png.flaticon.com/512/684/684831.png"></a>
-                        <a href="">Pendataan Profile <br> Anak</a>
-                    </p>
-                    <p>
-                        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/2822/2822676.png"></a>
-                        <a href="">Lihat Data</a>
+                        <a href="">Data Imunisasi<br> Anak</a>
                     </p>
                 </li>
             </ul>
         </div>
-    </div>
-    
-    <div class="contact">
-        <ul align="center">
-            <li class="info" align="left">
-                <h2>M-Posyandu</h2>
-                <p>Pendataan imunisasi <br>anak di Posyandu <br>dengan sistem online</p>
-            </li>
-            <li class="sosmed">
-                <h2>Follow Us</h2>
-                <a href="" title="Facebook">
-                    <img src="https://cdn-icons-png.flaticon.com/512/5968/5968764.png" width="40px">
-                </a>
-                <a href="" title="Instagram">
-                    <img src="https://cdn-icons-png.flaticon.com/512/3955/3955024.png" width="40px">
-                </a>
-                <a href="" title="WhatsApp">
-                    <img src="https://cdn-icons-png.flaticon.com/512/5968/5968841.png" width="40px">
-                </a>
-            </li>
-        </ul>
     </div>
 
     <!-- FOOTER -->
