--- a/features.html
+++ b/features.html
@@ -24,7 +24,7 @@
         </ul>
         <ul class="menu-2">
             <li><a href="/">Profil</a></li>
-            <li><a href="/">Logout</a></li>
+            <li><a href="logout.php">Logout</a></li>
         </ul>
         <div class="menu-toggle">
             <input type="checkbox" />
