--- a/about.html
+++ b/about.html
@@ -69,9 +69,11 @@
         </div>
     </div>
     
-    <div class="contact">
+    <!-- FOOTER -->
+    <!-- CONTACT -->
+    <div id="contact" class="contact">
         <ul align="center">
-            <li class="info" align="left">
+            <li class="info">
                 <h2>M-Posyandu</h2>
                 <p>Pendataan imunisasi <br>anak di Posyandu <br>dengan sistem online</p>
             </li>
@@ -87,10 +89,17 @@
                     <img src="https://cdn-icons-png.flaticon.com/512/5968/5968841.png" width="40px">
                 </a>
             </li>
+            <li>
+                <h2>Contact</h2>
+                <p> 
+                    Ilham (+62 857-5165-8952) <br>
+                    Fiana (+62 821-5065-8726) <br>
+                    Fira (+62 831-5351-7731) <br>
+                </p>
+            </li>
         </ul>
     </div>
 
-    <!-- FOOTER -->
     <footer>
         <p align="center">© 2022 designed by development's M-Posyandu. All Rights Reserved</p>
     </footer>
