--- a/profil.html
+++ b/profil.html
@@ -1,3 +1,14 @@
+<!-- <?php
+    session_start();
+    if(!isset($_SESSION['login'])){
+        echo "
+        <script>
+            alert('Akses ditolak, silahkan login dulu');
+            document.location.href = 'user_login.php';
+        </script>";
+    }
+?> -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,11 +30,11 @@
         <ul class="menu-1">
             <li><a href="homeUser.php">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="/">Features</a></li>
-            <li><a href="/">Contact</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#bottom">Contact</a></li>
         </ul>
         <ul class="menu-2">
-            <li><a href="/">Profil</a></li>
+            <li><a href="profil.php">Profil</a></li>
             <li><a href="logout.php">Logout</a></li>
         </ul>
         <div class="menu-toggle">
@@ -36,14 +47,36 @@
 
     <!-- MAIN-CONTENT -->
     <div class="main-content">
+        <!-- CONTENT 1 -->
+        <div class="content-1">
+            <ul align="center">
+                <h1>M-Posyandu</h1>
+                <li class="text2"><br>Pendataan imunisasi anak di Posyandu dengan sistem online</li>
+            </ul>
+            <ul>
+                <img src="https://cdn-icons-png.flaticon.com/512/6205/6205025.png" width="250px">
+            </ul>
+        </div>
+        <!-- CONTENT 2 -->
+        <div class="content-2">
+            <ul align="center">
+                <li class="text1">About M-Posyandu<br></li>
+                <li class="text2">
+                    <br>Dengan adanya website M-Posyandu ini diharapkan <br>
+                    dapat membantu para orang tua dalam pemberian atau penentuan <br>
+                    imunisasi si anak, dengan begitu anak bisa mendapatkan <br> 
+                    imunisasi yang tepat sesuai dengan usianya.
+                </li>
+            </ul>
+        </div>
         <!-- CONTENT 3 -->
-        <div class="content-3">
+        <div id="features" class="content-3">
             <ul align="center">
                 <li class="text1">Features<br><br></li>
                 <li class="text3">
                     <p>
-                        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/684/684831.png"></a>
-                        <a href="">Pendataan Profile <br> Anak</a>
+                        <a href="formUser.php"><img src="https://cdn-icons-png.flaticon.com/512/684/684831.png"></a>
+                        <a href="formUser.php">Pendataan Profile <br> Anak</a>
                     </p>
                     <p>
                         <a href=""><img src="https://cdn-icons-png.flaticon.com/512/2822/2822676.png"></a>
@@ -54,10 +87,11 @@
         </div>
     </div>
     
+    <!-- FOOTER -->
     <!-- CONTACT -->
-    <div class="contact">
+    <div id="contact" class="contact">
         <ul align="center">
-            <li class="info" align="left">
+            <li class="info">
                 <h2>M-Posyandu</h2>
                 <p>Pendataan imunisasi <br>anak di Posyandu <br>dengan sistem online</p>
             </li>
@@ -73,10 +107,16 @@
                     <img src="https://cdn-icons-png.flaticon.com/512/5968/5968841.png" width="40px">
                 </a>
             </li>
+            <li>
+                <h2>Contact</h2>
+                <p> 
+                    Ilham (+62 857-5165-8952) <br>
+                    Fiana (+62 821-5065-8726) <br>
+                    Fira (+62 831-5351-7731) <br>
+                </p>
+            </li>
         </ul>
     </div>
-
-    <!-- FOOTER -->
     <footer>
         <p align="center">© 2022 designed by development's M-Posyandu. All Rights Reserved</p>
     </footer>
