--- a/about_admin.html
+++ b/about_admin.html
@@ -7,7 +7,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <title>M-Posyandu</title>
 </head>
 <body>
@@ -17,13 +17,13 @@
             <h3>M-Posyandu</h3>
         </div>
         <ul class="menu-1">
-            <li><a href="homeUser.php">Home</a></li>
+            <li><a href="homeAdmin.php">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="features.php">Features</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="feedback.php">Feedback</a></li>
         </ul>
         <ul class="menu-2">
-            <li><a href="profil.php">Profil</a></li>
+            <li><a href="profil_admin.php">Profil</a></li>
             <li><a href="logout.php">Logout</a></li>
         </ul>
         <div class="menu-toggle">
@@ -70,36 +70,6 @@
     </div>
     
     <!-- FOOTER -->
-    <!-- CONTACT -->
-    <div id="contact" class="contact">
-        <ul align="center">
-            <li class="info">
-                <h2>M-Posyandu</h2>
-                <p>Pendataan imunisasi <br>anak di Posyandu <br>dengan sistem online</p>
-            </li>
-            <li class="sosmed">
-                <h2>Follow Us</h2>
-                <a href="" title="Facebook">
-                    <img src="https://cdn-icons-png.flaticon.com/512/5968/5968764.png" width="40px">
-                </a>
-                <a href="" title="Instagram">
-                    <img src="https://cdn-icons-png.flaticon.com/512/3955/3955024.png" width="40px">
-                </a>
-                <a href="" title="Twiter">
-                    <img src="https://cdn-icons-png.flaticon.com/512/3670/3670151.png" width="40px">
-                </a>
-            </li>
-            <li>
-                <h2>Contact</h2>
-                <p> 
-                    Ilham (+62 857-5165-8952) <br>
-                    Fiana (+62 821-5065-8726) <br>
-                    Fira (+62 831-5351-7731) <br>
-                </p>
-            </li>
-        </ul>
-    </div>
-
     <footer>
         <p align="center">© 2022 designed by development's M-Posyandu. All Rights Reserved</p>
     </footer>
