--- a/about_admin.html
+++ b/about_admin.html
@@ -19,7 +19,7 @@
         <ul class="menu-1">
             <li><a href="homeAdmin.php">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#features">Features</a></li>
+            <li><a href="homeAdmin.php#features">Features</a></li>
             <li><a href="feedback.php">Feedback</a></li>
         </ul>
         <ul class="menu-2">
